--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "crypto-browserify": "^3.12.1",
     "express": "^4.21.1",
